--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-2.98MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-7.41MB/s(Youtube:不良林), server: 5.183.176.81, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.76MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.35MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-441.7KB/s(Youtube:不良林), server: 185.172.113.106, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.65MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇬🇧 英国-2.56MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
+  - {name: 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇯🇵 日本-1.19MB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-263.6KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.20MB/s(Youtube:不良林), server: 134.195.196.150, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-3.35MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-3.44MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-441.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
