--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-2.56MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
-  - {name: 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇯🇵 日本-1.19MB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-263.6KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.20MB/s(Youtube:不良林), server: 134.195.196.150, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-3.97MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-500.7KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-3.72MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-7.41MB/s(Youtube:不良林), server: 5.183.176.81, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-3.35MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-3.44MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-263.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
