--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.97MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-500.7KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-3.72MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-7.41MB/s(Youtube:不良林), server: 5.183.176.81, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-278.0KB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-3.36MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.94MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-240.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.35MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-3.44MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
-  - {name: 🇺🇸 美国-5.75MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇺🇸 美国-5.19MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-278.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-278.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-278.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-278.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-278.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-278.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-500.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-278.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.44MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
