--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-439.7KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇯🇵 日本-193.8KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-504.2KB/s(Youtube:不良林), server: 5.183.176.81, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.04MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.34MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.21MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-2.27MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇬🇧 英国-2.45MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.08MB/s(Youtube:不良林), server: 5.183.176.83, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-186.9KB/s(Youtube:不良林), server: 185.172.113.102, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.19MB/s(Youtube:不良林), server: 5.183.176.80, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-324.3KB/s(Youtube:不良林), server: 5.183.176.94, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-532.2KB/s(Youtube:不良林), server: 5.183.176.93, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-558.3KB/s(Youtube:不良林), server: 5.183.176.94, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.78MB/s(Youtube:不良林), server: 89.31.126.147, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-193.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-504.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-193.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-504.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-193.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-504.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-193.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-504.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-193.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-504.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-193.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-504.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-439.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-193.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-504.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-186.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-324.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-532.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-558.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
